--- a/douhasskill/PRIMES.tex
+++ b/douhasskill/PRIMES.tex
@@ -55,7 +55,7 @@ Hence, let $\lambda^\prime([a],[b])$ denote the conditional function that operat
 {\color{white}-}
 \\
 Let [a] = $[\sigma]$ and [b] = $[\tau]$, hence $\lambda^\prime([\sigma],[\tau])$.
-\begin{equation} \lambda^\prime([\sigma],[\tau])= [\sigma_i\in[\sigma]\mid\sigma_i]\rightarrow\sigma_i\mid
-\begin{cases}1 \mid \sigma_i \in [\tau]\\ 0 \mid \sigma_i \not\in [\tau]\end{cases} \end{equation}
+\begin{equation} \lambda^\prime([\sigma],[\tau])= \begin{bmatrix}[\sigma_i\in[\sigma]\mid\sigma_i]\rightarrow\sigma_i\mid
+	\begin{cases}1 \mid \sigma_i \in [\tau]\\ 0 \mid \sigma_i \not\in [\tau]\end{cases}\end{bmatrix} \end{equation}
 
 \end{document}
