--- a/douhasskill/PRIMES.tex
+++ b/douhasskill/PRIMES.tex
@@ -42,17 +42,13 @@ Let $\tau$ denote the set containing odd numbers within the bound.
 Conditional logic will be applied inorder to optimize what multiples are yielded, i.e a multiple of 3 is 6, but 6 is even and hence not
 prime.\\
 Let the set of multiples be denoted $\sigma$.
-
-\begin{equation}
-	[\sigma]=\begin{bmatrix} [m,\tau_i \in [2...\mid\tau\mid],\tau]\rightarrow x,y \mid
-	\begin{cases}x*y\mid x*y <= \ \tau_{\mid\tau\mid}\\ \land\\x*y\mid x*y \mod 2 \not = 0\end{cases}\end{bmatrix}
+\begin{equation}[\sigma]=\begin{bmatrix} [m,\tau_i \in [2...\mid\tau\mid],\tau]\rightarrow x,y \mid
+\begin{cases}x*y\mid x*y <= \ \tau_{\mid\tau\mid}\\ \land\\x*y\mid x*y \mod 2 \not = 0\end{cases}\end{bmatrix}
 \end{equation}
-
-
 \section{EXCLUSION LOGIC}
 If a member of $\tau$ not in $\sigma$ then it is prime.
 Hence, let $\lambda^\prime([a],[b])$ denote the conditional function that operates on two sets and evaluates the existance of $a\in b$.
-\begin{equation}[\lambda^\prime([a],[b])] =\begin{bmatrix} [i \in a\mid i]\rightarrow i \mid\begin{cases}1 \mid i \in b\\ 0 \mid i 
+\begin{equation}[\lambda^\prime([a],[b])] =\begin{bmatrix} [i \in a]\rightarrow i\mid \begin{cases}1 \mid i \in b\\ 0 \mid i 
 \not\in b\end{cases}\end{bmatrix}\end{equation}
 
 \section{APPLICATION OF (3) to (2) and (1)}
@@ -60,7 +56,6 @@ Hence, let $\lambda^\prime([a],[b])$ denote the conditional function that operat
 {\color{white}-}
 \\
 Let [a] = $[\sigma]$ and [b] = $[\tau]$, hence $\lambda^\prime([\sigma],[\tau])$.
-\begin{equation} \lambda^\prime([\sigma],[\tau])= \begin{bmatrix}[\sigma_i\in[\sigma]\mid\sigma_i]\rightarrow\sigma_i\mid
+\begin{equation} \lambda^\prime([\sigma],[\tau])= \begin{bmatrix}[\sigma_i\in\sigma]\rightarrow\sigma_i\mid
 	\begin{cases}1 \mid \sigma_i \in [\tau]\\ 0 \mid \sigma_i \not\in [\tau]\end{cases}\end{bmatrix} \end{equation}
-
 \end{document}
