--- a/douhasskill/PRIMES.tex
+++ b/douhasskill/PRIMES.tex
@@ -42,7 +42,7 @@ Let $\tau$ denote the set containing odd numbers within the bound.
 Conditional logic will be applied inorder to optimize what multiples are yielded, i.e a multiple of 3 is 6, but 6 is even and hence not
 prime.\\
 Let the set of multiples be denoted $\sigma$.
-\begin{equation}[\sigma]=\begin{bmatrix} [m,\tau_i \in [2...\mid\tau\mid],\tau]\rightarrow x,y \mid
+\begin{equation}[\sigma]=\begin{bmatrix} [m,\tau_i \in [2...\mid\tau\mid],[\tau]]\rightarrow x,y \mid
 \begin{cases}x*y\mid x*y <= \ \tau_{\mid\tau\mid}\\ \land\\x*y\mid x*y \mod 2 \not = 0\end{cases}\end{bmatrix}
 \end{equation}
 \section{EXCLUSION LOGIC}
