--- a/douhasskill/hdtn.tex
+++ b/douhasskill/hdtn.tex
@@ -27,15 +27,11 @@ Consider;\ [1,3,6,10,15], HDTN sequence of cardinality 5.\\
 1+2 = 3\\
 1+2+3 = 6\\
 1+2+3+4 = 10\\
-1+2+3+4+5 = 15
-\begin{equation}f^\prime(y,x) = \dfrac{y_n - y_\emptyset}{x_n,x_\emptyset}\end{equation} 
-Simplistic form of rate of change with respect to another variable.\\
-$consider; \\ 0+1=1\\a+b=b\ when\ a=0$\ hence\\ $1+2+3+4+5=15\\a+b+c+d+e=f$\ with further simplifications as such;\\
-$x_1+x_2+x_3+x_4+x_5=y_5$
-
-
-
-
+1+2+3+4+5 = 15\\
+Algebraic mapping of such;\\
+$0+1=1\\a+b=b\ when\ a=0$\ hence\\ $1+2+3+4+5=15\\a+b+c+d+e=f$\\ with a further simplification as such;\\
+$x_1+x_2+x_3+x_4+x_5=y_5$\\
+{\color{white}-}\\
 
 
 
