--- a/douhasskill/hdtn.tex
+++ b/douhasskill/hdtn.tex
@@ -32,7 +32,12 @@ Algebraic mapping of such;\\
 $0+1=1\\a+b=b\ when\ a=0$\ hence\\ $1+2+3+4+5=15\\a+b+c+d+e=f$\\ with a further simplification as such;\\
 $x_1+x_2+x_3+x_4+x_5=y_5$\\
 {\color{white}-}\\
-
+induction into sets;\\
+$x_i\in[x_n...x_d]$\ $y_i\in[y_n...y_d]$\\ as a set X maps to a singular value, it is expressed as such;\\
+$f([x_i...x_d])=y_d$, where the function is of the form;
+\begin{equation}
+	f([x_i...x_d])=\sigma
+\end{equation}
 
 
 
