--- a/douhasskill/hdtn.tex
+++ b/douhasskill/hdtn.tex
@@ -36,9 +36,7 @@ induction into sets;\\
 $x_i\in[x_n...x_d]$\ $y_i\in[y_n...y_d]$\\ as a set X maps to a singular value, it is expressed as such;\\
 $f([x_i...x_d])=y_d$, where the function is of the form;
 \begin{equation}
-	f([x_i...x_d])=\sigma
+f([x_i...x_d])=\sum_i^d=x_i+x_{i+1}
 \end{equation}
-
-
 
 \end{document}
