--- a/douhasskill/hdtn.tex
+++ b/douhasskill/hdtn.tex
@@ -18,7 +18,7 @@ The only prime contained in the HDTN sequence is 3 as the sum of 1 + 2. All numb
 The point of these documents is to develop a sense of mathematical understanding in conjunction with haskell inorder to provide
 solutions that are as near to optimal as possible. This includes some deductive reasoning backed with inextensive proofs. 
 
-\section{HDTN:Insights}
+\section{HDTN:Insights A}
 This section contains considered insights from the sequence of HDTN, the next section will be forming the general shape of
 assumptions that can be made based on these insights.\\
 {\color{white}-}\\
@@ -35,8 +35,14 @@ $x_1+x_2+x_3+x_4+x_5=y_5$\\
 induction into sets;\\
 $x_i\in[x_n...x_d]$\ $y_i\in[y_n...y_d]$\\ as a set X maps to a singular value, it is expressed as such;\\
 $f([x_i...x_d])=y_d$, where the function is of the form;
-\begin{equation}
-f([x_i...x_d])=\sum_i^d=x_i+x_{i+1}
-\end{equation}
+\begin{equation}f([x_i...x_d])=\sum_i^d=x_i+x_{i+1}\end{equation}
+\newpage
+\section{HDTN:Insights B}
+Carefully. Very, carefully, avoid a pitfall, that being the dissolution of a pattern with hidden infinities.
+The above function, is hard, I think there are very few methods that yield insights into the function and generation
+of the final HDTN. Taking the rate of change may be the most fruitful method. First I will explain what is ment by a pitfall.
+Quite simply. It is a hidden polynomial.
+
+
 
 \end{document}
