--- a/douhasskill/hdtn.tex
+++ b/douhasskill/hdtn.tex
@@ -41,8 +41,9 @@ $f([x_i...x_d])=y_d$, where the function is of the form;
 Carefully. Very, carefully, avoid a pitfall, that being the dissolution of a pattern with hidden infinities.
 The above function, is hard, I think there are very few methods that yield insights into the function and generation
 of the final HDTN. Taking the rate of change may be the most fruitful method. First I will explain what is ment by a pitfall.
-Quite simply. It is a hidden polynomial.
-
-
+Quite simply. It is a hidden polynomial. Where the degree of the polynomial is dependant on the cardinality of the domain.\\
+Writing the full form of the above function with cardinality 4 results in such;\\
+$f([x_1...x_4])=x_1+x_2+x_3+x_4$ if not clear at this point, let $x = ax$ then;
+$f([x_1...x_4])=a_1x_1+a_2x_2+a_3x_3+a_4x_4$ 
 
 \end{document}
