--- a/douhasskill/hdtn.tex
+++ b/douhasskill/hdtn.tex
@@ -44,6 +44,9 @@ of the final HDTN. Taking the rate of change may be the most fruitful method. Fi
 Quite simply. It is a hidden polynomial. Where the degree of the polynomial is dependant on the cardinality of the domain.\\
 Writing the full form of the above function with cardinality 4 results in such;\\
 $f([x_1...x_4])=x_1+x_2+x_3+x_4$ if not clear at this point, let $x = ax$ then;
-$f([x_1...x_4])=a_1x_1+a_2x_2+a_3x_3+a_4x_4$, being a polynomial of the Nth degree where N = $\mid[x]\mid$. : ) 
+$f([x_1...x_4])=a_1x_1+a_2x_2+a_3x_3+a_4x_4$, being a polynomial of the Nth degree where N = $\mid[x]\mid$\ \ : )\\
+Therefore I will make the assumption that being able to find the HDTN requires computing the roots of the polynomial via some method
+and this, might be a more efficient way of computing a HDTN without brute force addition of every single natural value. I will also
+make the second assumption that producing the divisible factors might come from deducing the coefficient of each respective term.
 
 \end{document}
