--- a/douhasskill/hdtn.tex
+++ b/douhasskill/hdtn.tex
@@ -54,7 +54,6 @@ Finding the roots of a polynomial is a classic ml problem, and as long as a stea
 a linear approach should suffice without any probablisitic mechanisims. I will also attempt to devise a hard formulation but I feel
 my limitations as I think the formula will change dependant on the degree of the polynomial. Hence it will require devising a
 function that alters a formula, adding and maybe removing terms to match the degree. Specifically what I warn against trying at the 
-start of this section, as it involves conquring an infinity.
-
+start of this section, as it involves conquring an infinity, and hence why ml is THE IDEAL approach. As it automates the traversal.
 
 \end{document}
