--- a/douhasskill/hdtn.tex
+++ b/douhasskill/hdtn.tex
@@ -19,8 +19,8 @@ The point of these documents is to develop a sense of mathematical understanding
 solutions that are as near to optimal as possible. This includes some deductive reasoning backed with inextensive proofs. 
 
 \section{HDTN:Insights A}
-This section contains considered insights from the sequence of HDTN, the next section will be forming the general shape of
-assumptions that can be made based on these insights.\\
+This section contains considered insights from the sequence of HDTN, the next section will be forming general assumptions 
+that can be made based on these insights.\\
 {\color{white}-}\\
 Consider;\ [1,3,6,10,15], HDTN sequence of cardinality 5.\\
 0+1 = 1\\
