--- a/douhasskill/hdtn.tex
+++ b/douhasskill/hdtn.tex
@@ -55,5 +55,7 @@ a linear approach should suffice without any probablisitic mechanisims. I will a
 my limitations as I think the formula will change dependant on the degree of the polynomial. Hence it will require devising a
 function that alters a formula, adding and maybe removing terms to match the degree. Specifically what I warn against trying at the 
 start of this section, as it involves conquring an infinity, and hence why ml is THE IDEAL approach. As it automates the traversal.
+\\
+First I will try the approach I expect to fail. 
 
 \end{document}
