--- a/douhasskill/hdtn.tex
+++ b/douhasskill/hdtn.tex
@@ -37,7 +37,7 @@ $x_i\in[x_n...x_d]$\ $y_i\in[y_n...y_d]$\\ as a set X maps to a singular value, 
 $f([x_i...x_d])=y_d$, where the function is of the form;
 \begin{equation}f([x_i...x_d])=\sum_i^d=x_i+x_{i+1}\end{equation}
 \newpage
-\section{HDTN:Insights B}
+\subsection{HDTN:Considerations A}
 Carefully. Very, carefully, avoid a pitfall, that being the dissolution of a pattern with hidden infinities.
 The above function, is hard, I think there are very few methods that yield insights into the function and generation
 of the final HDTN. Taking the rate of change may be the most fruitful method. First I will explain what is ment by a pitfall.
@@ -56,6 +56,10 @@ my limitations as I think the formula will change dependant on the degree of the
 function that alters a formula, adding and maybe removing terms to match the degree. Specifically what I warn against trying at the 
 start of this section, as it involves conquring an infinity, and hence why ml is THE IDEAL approach. As it automates the traversal.
 \\
-First I will try the approach I expect to fail. 
+First a clear decleration, that the $x_q$ terms do not need to be "found" as they are known, hence only $a_q$ coefficients.
+$q \in [[i...n]\in[x_i...x_n]]$. Following is a small numerical example, but another decleration must be made in preparation. as ax = x.
+and x is a natural number, the ax respective of a must result in an x that is a whole natural number.
+
+
 
 \end{document}
