--- a/douhasskill/hdtn.tex
+++ b/douhasskill/hdtn.tex
@@ -58,8 +58,10 @@ start of this section, as it involves conquring an infinity, and hence why ml is
 \\
 First a clear decleration, that the $x_q$ terms do not need to be "found" as they are known, hence only $a_q$ coefficients.
 $q \in [[i...n]\in[x_i...x_n]]$. Following is a small numerical example, but another decleration must be made in preparation. as ax = x.
-and x is a natural number, the ax respective of a must result in an x that is a whole natural number.
-
-
+and x is a natural number, the ax respective of a must result in an x that is a whole natural number.\\
+An unavoidability is the presence of primes. As a HDTN is a sum of natural numbers and primes are considered unique factors, 
+there is a possibility that there is a HDTN that is the sum of primes. Hence computing such a number would require computing each
+individual prime, and as such its composition would be unique and seperate from the rest of the HTDN sequence as well as other
+prime composite HDTN.
 
 \end{document}
