--- a/douhasskill/hdtn.tex
+++ b/douhasskill/hdtn.tex
@@ -62,6 +62,10 @@ and x is a natural number, the ax respective of a must result in an x that is a 
 An unavoidability is the presence of primes. As a HDTN is a sum of natural numbers and primes are considered unique factors, 
 there is a possibility that there is a HDTN that is the sum of primes. Hence computing such a number would require computing each
 individual prime, and as such its composition would be unique and seperate from the rest of the HTDN sequence as well as other
-prime composite HDTN.
+prime composite HDTN, as a prime is only similar to another prime inasmuchas they are both unique factors.
+With intuition, it may be a good idea to decalre then that there are three possible classifications;\\
+1)\ non-prime composite\\
+2)\ non-prime and prime composite\\
+3)\ prime composite\\
 
 \end{document}
