--- a/douhasskill/hdtn.tex
+++ b/douhasskill/hdtn.tex
@@ -66,6 +66,6 @@ prime composite HDTN, as a prime is only similar to another prime inasmuchas the
 With intuition, it may be a good idea to decalre then that there are three possible classifications;\\
 1)\ non-prime composite\\
 2)\ non-prime and prime composite\\
-3)\ prime composite\\
+3)\ prime composite
 
 \end{document}
