--- a/douhasskill/hdtn.tex
+++ b/douhasskill/hdtn.tex
@@ -18,7 +18,7 @@ The only prime contained in the HDTN sequence is 3 as the sum of 1 + 2. All numb
 The point of these documents is to develop a sense of mathematical understanding in conjunction with haskell inorder to provide
 solutions that are as near to optimal as possible. This includes some deductive reasoning backed with inextensive proofs. 
 
-\section{HDTN:Insights A}
+\section{HDTN:Disstillation}
 This section contains considered insights from the sequence of HDTN, the next section will be forming general assumptions 
 that can be made based on these insights.\\
 {\color{white}-}\\
@@ -37,7 +37,7 @@ $x_i\in[x_n...x_d]$\ $y_i\in[y_n...y_d]$\\ as a set X maps to a singular value, 
 $f([x_i...x_d])=y_d$, where the function is of the form;
 \begin{equation}f([x_i...x_d])=\sum_i^d=x_i+x_{i+1}\end{equation}
 \newpage
-\subsection{HDTN:Considerations A}
+\section{HDTN:Considerations A}
 Carefully. Very, carefully, avoid a pitfall, that being the dissolution of a pattern with hidden infinities.
 The above function, is hard, I think there are very few methods that yield insights into the function and generation
 of the final HDTN. Taking the rate of change may be the most fruitful method. First I will explain what is ment by a pitfall.
@@ -59,13 +59,7 @@ start of this section, as it involves conquring an infinity, and hence why ml is
 First a clear decleration, that the $x_q$ terms do not need to be "found" as they are known, hence only $a_q$ coefficients.
 $q \in [[i...n]\in[x_i...x_n]]$. Following is a small numerical example, but another decleration must be made in preparation. as ax = x.
 and x is a natural number, the ax respective of a must result in an x that is a whole natural number.\\
-An unavoidability is the presence of primes. As a HDTN is a sum of natural numbers and primes are considered unique factors, 
-there is a possibility that there is a HDTN that is the sum of primes. Hence computing such a number would require computing each
-individual prime, and as such its composition would be unique and seperate from the rest of the HTDN sequence as well as other
-prime composite HDTN, as a prime is only similar to another prime inasmuchas they are both unique factors.
-With intuition, it may be a good idea to decalre then that there are three possible classifications;\\
-1)\ non-prime composite\\
-2)\ non-prime and prime composite\\
-3)\ prime composite
+An unavoidability is the presence of primes. Carefully taking note of the HDTN generation sequence, it includes primes and non-primes,
+as it is the sequence of natural numbers. It can be declared that a HDTN is a highly related to a ratio between prime and non prime numbers.
 
 \end{document}
