--- a/douhasskill/hdtn.tex
+++ b/douhasskill/hdtn.tex
@@ -2,7 +2,7 @@
 \documentclass{article}
 \usepackage{amssymb}
 \usepackage{amsmath}
-\usepackage{xcolor}
+\usepackage{color}
 
 
 % main.tex
@@ -39,27 +39,18 @@ $f([x_i...x_d])=y_d$, where the function is of the form;
 \newpage
 \section{HDTN:Considerations A}
 Carefully. Very, carefully, avoid a pitfall, that being the dissolution of a pattern with hidden infinities.
-The above function, is hard, I think there are very few methods that yield insights into the function and generation
-of the final HDTN. Taking the rate of change may be the most fruitful method. First I will explain what is ment by a pitfall.
-Quite simply. It is a hidden polynomial. Where the degree of the polynomial is dependant on the cardinality of the domain.\\
-Writing the full form of the above function with cardinality 4 results in such;\\
-$f([x_1...x_4])=x_1+x_2+x_3+x_4$ if not clear at this point, let $x = ax$ then;\\
+The above function, is hard, I think there are very few methods that yield insights into the function and 
+generation of the final HDTN. Taking the rate of change may be the most fruitful method. First I will explain
+what is ment by a pitfall. Quite simply. It is a hidden polynomial. Where the degree of the polynomil i
+dependant on the cardinality of the domain.\\ Writing the full form of the above function with cardinality
+4 results in such;\\ $f([x_1...x_4])=x_1+x_2+x_3+x_4$ if not clear at this point, let $x = ax$ then;\\
 $f([x_1...x_4])=a_1x_1+a_2x_2+a_3x_3+a_4x_4$, being a polynomial of the Nth degree where N = $\mid[x]\mid$\ \ : )\\
 {\color{white}-}\\
-Therefore I will make the assumption that being able to find the HDTN requires computing the roots of the polynomial via some method
-and this, might be a more efficient way of computing a HDTN without brute force addition of every single natural value. I will also
-make the second assumption that producing the divisible factors might come from deducing the coefficient of each respective term.\\
-{\color{white}-}\\
-Finding the roots of a polynomial is a classic ml problem, and as long as a steady pattern is present, then error correction with
-a linear approach should suffice without any probablisitic mechanisims. I will also attempt to devise a hard formulation but I feel
-my limitations as I think the formula will change dependant on the degree of the polynomial. Hence it will require devising a
-function that alters a formula, adding and maybe removing terms to match the degree. Specifically what I warn against trying at the 
-start of this section, as it involves conquring an infinity, and hence why ml is THE IDEAL approach. As it automates the traversal.
-\\
-First a clear decleration, that the $x_q$ terms do not need to be "found" as they are known, hence only $a_q$ coefficients.
-$q \in [[i...n]\in[x_i...x_n]]$. Following is a small numerical example, but another decleration must be made in preparation. as ax = x.
-and x is a natural number, the ax respective of a must result in an x that is a whole natural number.\\
-An unavoidability is the presence of primes. Carefully taking note of the HDTN generation sequence, it includes primes and non-primes,
-as it is the sequence of natural numbers. It can be declared that a HDTN is a highly related to a ratio between prime and non prime numbers.
+I think, an easy way to do this is brute force approximation of the coefficients by using a boolean
+distance function that operates over iter1 and iter2 if the loss is less at iter2 than at iter1 then 
+the change in parameters is positive and approching approximation. This, becomes a difficult approach for larger
+mapping functions as the amount of "false" positives increase. Keenly take note, this is therefore not a smart
+approach. Unless guided by a quantum mechanisim.\\
+
 
 \end{document}
