--- a/douhasskill/hdtn.tex
+++ b/douhasskill/hdtn.tex
@@ -4,92 +4,44 @@
 \usepackage{amsmath}
 \usepackage{color}
 
-
 % main.tex
 \input{preamble}
 \begin{document}
 \maketitle
 \newpage
 \section{HDTN:Introduction}
-This is a LaTeX document backed with Haskell, displaying a brute
-force method of computing the divisors of highly divisible triangle
-numbers. Two methods will be used, initally brute force search,
-and second a mathematical distillation of the sequence to optimize
-the required computations towards a minimal point.
-\section{Brute Force Search}
-The following section describes the process of searching for divisors for HDTNs with a brute force approach. 
-Through constructive mathematics a small set of functions can be denoted for finding HDTN, and the structure
-should be similar to the unoptimized prime finder as essentially it is a prime check for non prime numbers.
-But the key difference is calculating the divisors is essential as the divisors are being seached for,
-not for numbers that lack divisors.
-\subsection{BFS: General Intuitions}
-1+2 = 3\\
-1+2+3= 6\\
-1+2+3+4 = 10\\
-1+2+3+4+5 = 15\\
-1+2+3+4+5+6 = 21\\
-1+2+3+4+5+6+7 = 28\\
-{\color{white}-}\\
-A HDTN is the sum of consecutive natural numbers, not all natural numbers in the summing sequence is a
-divisor of the HDTN. The minimum multiple is two as a double of x. Therefore all possible divisors lie
-withing y/2. Looking at the above sequence, the difference between the last number in the summing sequence
-and the sum increases by an exponential degree. For now a bound y/2 is sufficient, but an optimized search
-would vary the bound dependant on y, possible allowing it to be y/4 and even lower, but implimenting such a
-bound would require some precision as if the variable bound is incorrect then divisors will be missed during
-the search.\\
-1) HDTN lie in either the odd or even domain. Encapsulating both sides. Due to symetry being present in
-both odd and even domains.\\
-2) If a HDTN is odd it cannot have even divisors.\\
-3) However a even HDTN can have odd divisors.\\
-4) Hence even HDTN have more divisors as they lie in both the odd and even domain.\\
-5) The set of possible divisors is from 2 to B where B is the bound.\\
-6) If the HDTN is odd then the set of possible divisors only contains odd numbers.\\
-7) If the HDTN is even then the set of possible divisors contain all natural numbers from 2 to B.
-\subsection{BFS: Distillation of Intuitions}
-First a classification function will be definied.
+A highly divisible triangle number is the sum of consecutive natural numbers. The question being
+proposed is how to find the divisors of hdtn, as a hdtn can either be odd or even, we assume
+that there are two classifications of hypersymetry due to the existance of common multiples 
+between factors. From those factors the primes must be accounted for as unique factors.
+I think one can therefore disect and recombine some prime yielding logic to work for yielding
+divisors, hence I will attempt to disect the prime finding code and alter its form to yield,
+the divisors of a number, as a prime involves checking for possible divisors, and the question
+is how to find the divisors of a hdtn, which might contain primes, non-primes and both primes and 
+non-primes. : )\\
+Following I will describe the structure of the document, Encapsulation, Consideration, Decomposition,
+Recomposition.
+\section{Encapsulation}
+\subsubsection{1 consideration}
+The question is how to find the divisors of hdtn, a hdtn can be either odd or even. The above is a function
+from the PRIME finder document, allowing for classification of x as either odd or even. Naturally a question
+arises, if hdtns can be odd and even, and no prime is even hence all primes lie in the odd domain, is it
+possible that a hdtn of odd denomination is a prime, and hence has no divisors. The hdtn sequence is as
+follows:\\(1+2)=3\\(1+2+3)=6\\(1+2+3+4)=10\\(1+2+3+4+5)=15\\(1+2+3+4+5+6)=21\\ I will limit my assumptions
+to the above, assumption one as a prime number is a unique factor and hence a "building block" of other
+numbers, it fills in the gaps left by multiples due to the fact that multiplication paths of factors cover
+finite and cyclical points. Hence if the starting factors are two and three, gaps are left in 5, and 7 and 
+so on. So primes are the factors that fill the implied missing spaces. Therefore a prime cannot be the sum of
+consecutive natural numbers, starting from 1. As a small proof of this I will make use of two programs,
+one, a prime number finder, and two a hdtn sequence yielder. Then it is implied that checking numbers from
+the sets yielded by the prime number finder and hdtn sequence yielder should hold no duplicates, each number
+set should be unique, and if such is true then no prime number is a hdtn, and therefore special rules may
+be able to be derived for bounds based on the location of primes.
+\subsubsection{Encapsulation: Odd and Even identity}
 \begin{equation}
-\sigma^A(x)= y 
-\begin{cases}
-1\mid (x\mod 2 = 0) \\
-0\mid (x\mod 2 \not= 0)
-\end{cases}
+	f_{\not O\not E}(x) = y
+	\begin{cases} True  \mid x \mod 2 = 0\\
+	False \mid otherwise\end{cases}
 \end{equation}
-Hence a HDTN can be classified as odd or even. Based on this classification two different search methods are
-used. If odd, only odd factors are generated from 3 to the factor where y/3 = b. If even, all factors are
-checked. From two, to the factor where y*2 = b.\\
-The bounds can denoted as such;
-\begin{subequations}
-\begin{align}
-	B^O\land B^E\\
-	B^O(y) = y/3\\
-	B^E(y) = y/2
-\end{align}
-\end{subequations}
-\begin{subequations}
-\begin{align}
-	[F_{B^O}] = [F\in[3...\frac{y}{3}]\mid F]\\
-	[F_{B^E}] = [F\in[3...\frac{y}{2}]\mid F]\\
-	[F_{B^O}]_{\mid F_{B^O}\mid}*3=y\\
-	[F_{B^E}]_{\mid F_{B^E}\mid}*2=y 
-\end{align}
-\end{subequations}
-hence the maximal factor is computed, it is then infered that the respective set infers all divisors.
-constructing a set of ones equal to the size of the respective set yields a state that when summed is 
-equal to the amount of divisors respective of the HDTN. Simple, ez.\\
-Written in full form it follows as such;
-\section{BFS: Formalization}
-\begin{subequations}
-\begin{align}
-	\mathbb{B}(x)= y\begin{cases}1\mid x\mod2=0\\
-	0\mid x\mid2\not=0 \end{cases}\\
-	[F({\mathbb{B}(x)})]=[a...b]
-	\begin{cases}
-		a=2,b=\dfrac{x}{2}\mid \mathbb{B}(x)=0\\
-		{\color{white}-}\\
-		a=3,b=\dfrac{x}{3}\mid\mathbb{B}(x)\not=0
-	\end{cases}\\
-	\sum_{i=0}^{\mid[F(\mathbb{B}(x))]\mid}=[F(\mathbb{B}(x))]_i
-\end{align}
-\end{subequations}
-The above has been written into a Haskell program to show proof of concept and function.
+
 \end{document}
